# cpp-flecs-raylib-game

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  build_and_run.sh
libs/: CMakeLists.txt
src/: main.cpp
src/include/: game.cpp  game.h  handler.cpp  handler.h  modules.h  types.h
src/include/camera/: camera.cpp  camera.h
src/include/context/: context.cpp  context.h
src/include/context/definitions/: camera.cpp  enemy.cpp  entity.cpp  input.cpp  pipeline.cpp  player.cpp
src/include/definitions/: input.cpp  input.h  physics.cpp  physics.h  pipeline.cpp  pipeline.h  pipelines.cpp  pipelines.h  types.h
src/include/entity/: entity.cpp  entity.h
src/include/input/: input.cpp  input.h
src/include/pipeline/: pipeline.cpp  pipeline.h  render_pipeline.cpp  render_pipeline.h
src/include/player/: player.cpp  player.h
